--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,15 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# vscode
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+# Local History for Visual Studio Code
+.history/
