--- a/.gitignore
+++ b/.gitignore
@@ -141,7 +141,7 @@ cython_debug/
 # vscode
 
 .vscode/*
-!.vscode/settings.json
+.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
