--- a/.gitignore
+++ b/.gitignore
@@ -142,9 +142,9 @@ cython_debug/
 
 .vscode/*
 .vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
 *.code-workspace
 
 # Local History for Visual Studio Code
