--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
 beautifulsoup4==4.9.3
 bs4==0.0.1
-certifi==2020.12.5
+certifi==2021.5.30
 chardet==4.0.0
-click==7.1.2
-Flask==1.1.2
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.3
+charset-normalizer==2.0.3
+click==8.0.1
+Flask==2.0.1
+idna==3.2
+itsdangerous==2.0.1
+Jinja2==3.0.1
 lxml==4.6.3
-MarkupSafe==1.1.1
-requests==2.25.1
+MarkupSafe==2.0.1
+requests==2.26.0
 soupsieve==2.2.1
-urllib3==1.26.4
-Werkzeug==1.0.1
+urllib3==1.26.6
+Werkzeug==2.0.1
