--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
-beautifulsoup4==4.9.3
+autopep8==1.6.0
+beautifulsoup4==4.10.0
 bs4==0.0.1
-certifi==2021.5.30
+certifi==2021.10.8
 chardet==4.0.0
-charset-normalizer==2.0.3
-click==8.0.1
-Flask==2.0.1
-idna==3.2
+charset-normalizer==2.0.10
+click==8.0.3
+Flask==2.0.2
+idna==3.3
 itsdangerous==2.0.1
-Jinja2==3.0.1
-lxml==4.6.3
+Jinja2==3.0.3
+lxml==4.7.1
 MarkupSafe==2.0.1
-requests==2.26.0
-soupsieve==2.2.1
-urllib3==1.26.6
-Werkzeug==2.0.1
+pkg_resources==0.0.0
+pycodestyle==2.8.0
+requests==2.27.1
+soupsieve==2.3.1
+toml==0.10.2
+urllib3==1.26.8
+Werkzeug==2.0.2
