--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,27 @@ certifi==2021.10.8
 chardet==4.0.0
 charset-normalizer==2.0.10
 click==8.0.3
+cycler==0.11.0
 Flask==2.0.2
+fonttools==4.32.0
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
+kiwisolver==1.4.2
 lxml==4.7.1
 MarkupSafe==2.0.1
+matplotlib==3.5.1
+numpy==1.22.3
+packaging==21.3
+pandas==1.4.1
+Pillow==9.1.0
 pkg_resources==0.0.0
 pycodestyle==2.8.0
+pyparsing==3.0.8
+python-dateutil==2.8.2
+pytz==2022.1
 requests==2.27.1
+six==1.16.0
 soupsieve==2.3.1
 toml==0.10.2
 urllib3==1.26.8
