--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,12 @@
-autopep8==1.6.0
-beautifulsoup4==4.10.0
-bs4==0.0.1
+blinker==1.8.2
 certifi==2024.7.4
-chardet==4.0.0
-charset-normalizer==2.0.10
-click==8.0.3
-cycler==0.11.0
-Flask==2.2.5
-fonttools==4.43.0
+charset-normalizer==3.3.2
+click==8.1.7
+Flask==3.0.3
 idna==3.7
-itsdangerous==2.0.1
+itsdangerous==2.2.0
 Jinja2==3.1.4
-kiwisolver==1.4.2
-lxml==4.9.1
-MarkupSafe==2.0.1
-matplotlib==3.5.1
-numpy==1.22.3
-packaging==21.3
-pandas==1.4.1
-Pillow==10.3.0
-pkg_resources==0.0.0
-pycodestyle==2.8.0
-pyparsing==3.0.8
-python-dateutil==2.8.2
-pytz==2022.1
-requests==2.32.0
-six==1.16.0
-soupsieve==2.3.1
-toml==0.10.2
-
-
+MarkupSafe==2.1.5
+requests==2.32.3
+urllib3==2.2.2
 Werkzeug==3.0.3
-
-urllib3==1.26.19
-
-
